# UMF_REPO

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-MIT  README.md  pyproject.toml  requirements.txt
.github/workflows/: validate-examples.yml
docs/: governance.md  index.md
docs/adr/: ADR-001-canonical-lineage-promotion.md  ADR-002-schema-migration-and-compatibility.md  ADR-003-taxonomy-versioning-and-vocabulary.md  README.md
examples/: recipe-example.json
examples/story/: README.md  chef-example.json  collection-example.json  ingredient-example.json  menu-example.json  product-example.json  recipe-example.json  service-example.json  technique-example.json  vendor-example.json
schemas/: README.md  chef.schema.json  collection.schema.json  ingredient.schema.json  menu.schema.json  product.schema.json  recipe.schema.json  service.schema.json  technique.schema.json  vendor.schema.json
scripts/: fetch_schemas.py  validate_recipe.py
taxonomy/: README.md  dietary-presets.v1.0.0.json  ingredient-taxonomy.v1.0.0.json
tools/: validate_lineage_rules.js
